Fix layout shift on desktop (#1290)
* Fix layout shift on desktop

* cleanup

--- a/src/theme/Navbar/styles.module.css
+++ b/src/theme/Navbar/styles.module.css
@@ -59,12 +59,6 @@
   height: 32px;
 }
 
-@media screen and (max-width: 550px) {
-  :global(.navbar__items--right .navbar__item.header-github-link) {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 405px) {
   :global(.navbar__item.header-github-link) {
     display: none;
@@ -144,12 +138,6 @@
   }
 }
 
-@media (max-width: 996px) {
-  .benchmarkButton {
-    display: none;
-  }
-}
-
 /* prevent navbar right side to climb up on the left side, by shrinking the search bar */
 @media (min-width: 997px) and (max-width: 1027px), (min-width: 1201px) and (max-width: 1300px) {
   :global(.DocSearch-Button-Keys) {
@@ -178,5 +166,16 @@
   .inner {
     max-width: calc(var(--ifm-container-width) + 100px);
   }
+}
+
+@media (max-width: 996px) {
+  .benchmarkButton,
+  :global(.navbar__items--right .navbar__item.header-github-link),
+  .searchBar,
+  .getQuestdb,
+  .themeToggleInHeading {
+    display: none;
+  }
+
 }
 
